--- a/part3/backend/package.json
+++ b/part3/backend/package.json
@@ -9,7 +9,7 @@
     "test": "echo \\\"Error: no test specified\\\" && exit 1\"",
     "build:ui": "rm -rf build && cd ../part2/phonebook && npm run build && cp -r build ../backend",
     "deploy": "fly deploy",
-    "deploy:full": "npm run build:ui && npm run deploy",    
+    "deploy:full": "npm run build:ui && npm run deploy",
     "logs:prod": "fly logs"
   },
   "proxy": "http://localhost:3001",
@@ -17,7 +17,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^7.4.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
