--- a/part3/backend/package.json
+++ b/part3/backend/package.json
@@ -10,7 +10,8 @@
     "build:ui": "rm -rf build && cd ../part2/phonebook && npm run build && cp -r build ../backend",
     "deploy": "fly deploy",
     "deploy:full": "npm run build:ui && npm run deploy",
-    "logs:prod": "fly logs"
+    "logs:prod": "fly logs",
+    "lint": "eslint ."
   },
   "proxy": "http://localhost:3001",
   "author": "",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.4.0",
+    "eslint": "^8.46.0",
     "nodemon": "^3.0.1"
   }
 }
