--- a/part4/blog-list/package.json
+++ b/part4/blog-list/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.46.0",
+    "lint": "^0.8.19",
     "nodemon": "^3.0.1"
   },
   "dependencies": {
@@ -19,5 +21,8 @@
     "express": "^4.18.2",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.2"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
