--- a/part4/blog-list/package.json
+++ b/part4/blog-list/package.json
@@ -14,7 +14,8 @@
     "eslint": "^8.46.0",
     "jest": "^29.6.2",
     "lint": "^0.8.19",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
   },
   "dependencies": {
     "cors": "^2.8.5",
